[package]
name = "summum-types"
description = "Sum Type macro with all the features"
keywords = ["macro", "type-union", "sum-type", "union-type", "enum"]
authors = ["Luke Peterson <luketpeterson@gmail.com>"]
repository = "https://github.com/luketpeterson/summum-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.79"
syn = { version = "2.0.52", features = ["full"] }
heck = "0.4.1"

[features]
default = []

#TODO: I want to show examples of all the features... but alas I'd need a separate
# crate to actually publish them on docs.rs.  And I want to keep to a single crate.
#generated_example = []

