[package]
name = "summum-types"
version = "0.1.4"
edition = "2021"
authors = ["Luke Peterson <luketpeterson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A sum-type macro crate with all the conversions, accessors, and support for abstract methods across variants, and interoperability between sum-types"
repository = "https://github.com/luketpeterson/summum-types"
readme = "README.md"
keywords = ["macro", "type-union", "sum-type", "union-type", "enum"]
categories = ["rust-patterns", "algorithms", "data-structures", ]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.79"
syn = { version = "2.0.52", features = ["full"] }
heck = "0.4.1"

[features]
default = []

#TODO: I want to show examples of all the features... but alas I'd need a separate
# crate to actually publish them on docs.rs.  And I want to keep to a single crate.
#generated_example = []

